style: fix border and postion mobile version

--- a/assets/images/css/styles.css
+++ b/assets/images/css/styles.css
@@ -30,7 +30,7 @@
 }
 body{
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     text-align: center;
     font-family: 'Hanken Grotesk', sans-serif;
@@ -39,6 +39,7 @@ body{
 .container{
     width: 360px;
     box-shadow: 0px 3px 25px 2px rgba(199,198,255,1);
+    border-radius: 20px;
     
 }
 .your-score{
@@ -64,6 +65,7 @@ body{
     justify-content: center;
     align-items: center;
     background: linear-gradient(353deg, rgba(45,42,232,1) 19%, rgba(17,36,212,1) 54%);
+    
 
 
 }
@@ -154,6 +156,9 @@ button:hover{
 }
 
 @media screen and (min-width:900px) {
+    body{
+        align-items: center;
+    }
 
     .container{
         display: flex;
